// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applied styles animations displays animation using the "continuous" type 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-animation-name: iHtkXv;
  animation-name: iHtkXv;
  -webkit-animation-duration: 4s;
  animation-duration: 4s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<Styled(Styled(Component))
  animation={
    Object {
      "continuous": Object {
        "from": Object {
          "opacity": 0,
        },
        "to": Object {
          "opacity": 1,
        },
      },
      "duration_continuous": 4,
    }
  }
>
  <Component
    animation={
      Object {
        "continuous": Object {
          "from": Object {
            "opacity": 0,
          },
          "to": Object {
            "opacity": 1,
          },
        },
        "duration_continuous": 4,
      }
    }
    className="c0"
    isA="div"
  >
    <div
      className="c0"
    />
  </Component>
</Styled(Styled(Component))>
`;

exports[`applied styles animations displays animation using the "in" type 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-animation-name: iHtkXv;
  animation-name: iHtkXv;
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
  -webkit-animation-iteration-count: 2;
  animation-iteration-count: 2;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<Styled(Styled(Component))
  animation={
    Object {
      "duration_in": 3,
      "in": Object {
        "from": Object {
          "opacity": 0,
        },
        "to": Object {
          "opacity": 1,
        },
      },
      "iteration": 2,
    }
  }
>
  <Component
    animation={
      Object {
        "duration_in": 3,
        "in": Object {
          "from": Object {
            "opacity": 0,
          },
          "to": Object {
            "opacity": 1,
          },
        },
        "iteration": 2,
      }
    }
    className="c0"
    isA="div"
  >
    <div
      className="c0"
    />
  </Component>
</Styled(Styled(Component))>
`;

exports[`applied styles animations displays animation using the "out" type 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-animation-name: iHtkXv;
  animation-name: iHtkXv;
  -webkit-animation-duration: 4s;
  animation-duration: 4s;
  -webkit-animation-iteration-count: 5;
  animation-iteration-count: 5;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<Styled(Styled(Component))
  animation={
    Object {
      "duration_out": 4,
      "iteration": 5,
      "out": Object {
        "from": Object {
          "opacity": 0,
        },
        "to": Object {
          "opacity": 1,
        },
      },
    }
  }
>
  <Component
    animation={
      Object {
        "duration_out": 4,
        "iteration": 5,
        "out": Object {
          "from": Object {
            "opacity": 0,
          },
          "to": Object {
            "opacity": 1,
          },
        },
      }
    }
    className="c0"
    isA="div"
  >
    <div
      className="c0"
    />
  </Component>
</Styled(Styled(Component))>
`;

exports[`applied styles animations has seperate animations when using the "delay_between" with "in" and "out" animations 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-animation-name: iHtkXv;
  animation-name: iHtkXv;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<Styled(Styled(Component))
  animation={
    Object {
      "animation_fill_mode": "forwards",
      "delay_between": 4,
      "duration_in": 2,
      "duration_out": 1,
      "in": Object {
        "from": Object {
          "opacity": 0,
        },
        "to": Object {
          "opacity": 1,
        },
      },
      "out": Object {
        "from": Object {
          "background-color": "red",
        },
        "to": Object {
          "background-color": "yellow",
        },
      },
    }
  }
>
  <Component
    animation={
      Object {
        "animation_fill_mode": "forwards",
        "delay_between": 4,
        "duration_in": 2,
        "duration_out": 1,
        "in": Object {
          "from": Object {
            "opacity": 0,
          },
          "to": Object {
            "opacity": 1,
          },
        },
        "out": Object {
          "from": Object {
            "background-color": "red",
          },
          "to": Object {
            "background-color": "yellow",
          },
        },
      }
    }
    className="c0"
    isA="div"
  >
    <div
      className="c0"
    />
  </Component>
</Styled(Styled(Component))>
`;

exports[`applied styles has a div with margin 75% 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  width: 75%;
}

<Component
  className="c0"
  isA="div"
  width="75%"
/>
`;

exports[`applied styles properly displays camelcase css 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  background-color: red;
}

<Component
  backgroundColor="red"
  className="c0"
  isA="div"
/>
`;

exports[`applied styles properly displays destructed object styles 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-clip-path: circle(40%);
  clip-path: circle(40%);
  height: 200px;
}

<Component
  className="c0"
  clipPath="circle(40%)"
  height="200px"
  isA="div"
/>
`;

exports[`applied styles pseudo has hover styles 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: font-size 4s linear,height 2s linear,width 3s linear;
  transition: font-size 4s linear,height 2s linear,width 3s linear;
  -webkit-transition: font-size 4s linear,height 2s linear,width 3s linear;
  transition: font-size 4s linear,height 2s linear,width 3s linear;
}

.c0:hover {
  font-size: 2.4rem;
  height: 200px;
  width: 300px;
  color: blue;
}

.c0:hover {
  font-size: 2.4rem;
  height: 200px;
  width: 300px;
  color: blue;
}

<Component
  className="c0"
  hover={
    Object {
      "color": "blue",
      "fontSize": "2.4rem",
      "height": "200px",
      "width": "300px",
    }
  }
  isA="div"
  pseudo={true}
  transition="font-size 4s linear, height 2s linear, width 3s linear"
/>
`;
